adds module 4, objective 3

--- a/Module 4/1.1 Objective 1.md
+++ b/Module 4/1.1 Objective 1.md
@@ -1,7 +1,7 @@
 ## OpenAI API Basics
 
 ## Setting Up OpenAI's Python SDK
-The OpenAI API provides a way to programmatically interact with the model for various tasks like text generation, summarization, and more. OpenAI provides an SDK for Python that wraps the raw API calls, offering a more Pythonic way to make requests to the GPT models.
+The OpenAI API provides a way to programmatically interact with their models for various tasks like text generation, summarization, and more. OpenAI provides an SDK for Python that wraps the API, offering a more Pythonic way to make requests to the GPT models.
 
 ### Prerequisites
 
