--- a/Module 4/1.2 Objective 2.md
+++ b/Module 4/1.2 Objective 2.md
@@ -27,14 +27,14 @@ When you make an API call using the SDK, you receive a response object. This obj
 To extract the generated text from the response object, you can use the following code snippet:
 
 ```python
-generated_text = response.choices[0].text.strip()
+generated_text = response.choices[0].message.content.strip()
 ```
 
 As a function...
 
 ```python
 def extract_reply(response):
-    return response.choices[0].text.strip()
+    return response.choices[0].message.content.strip()
 
 
 generated_text = extract_reply(response)
@@ -144,4 +144,3 @@ With this foundation, you are well-prepared to explore more advanced topics and 
 
 ## Additional Resources
 - [OpenAI API Reference](https://platform.openai.com/docs/api-reference)
-- 
