adds intro for M4 O2

--- a/Module 4/1.2 Objective 2.md
+++ b/Module 4/1.2 Objective 2.md
@@ -1,5 +1,9 @@
 ## OpenAI API SDK
 
+### Introduction
+
+The OpenAI API SDK serves as a powerful tool for leveraging machine learning capabilities within your applications. By manipulating parameters such as `prompt`, `max_tokens`, `temperature`, and `top_p`, users can fine-tune the output to meet their specific needs. Whether you are aiming for more deterministic results or embracing randomness, understanding these options enables you to exploit the full potential of the API.
+
 ### `prompt`
 
 The `prompt` parameter is the initial string that guides the model in generating a completion. The more specific and contextual the prompt, the more accurate the generated text will be.
