--- a/Module 3/1.1 Objective 1.md
+++ b/Module 3/1.1 Objective 1.md
@@ -1,10 +1,10 @@
-# Introducing ChatGPT: A Revolution in Natural Language Understanding
+# Introducing ChatGPT: A Revolution in Natural Language Processing
 
 ## Introduction
-ChatGPT is a remarkable demonstration of the prowess of artificial intelligence in understanding and generating human-like text. Developed by OpenAI, it offers users the opportunity to engage with models such as ChatGPT-4, the latest in a series of transformer-based deep learning models. This article delves into the architecture, applications, ethical considerations, and future of ChatGPT, elucidating its significance in modern technology.
+ChatGPT is a remarkable demonstration of the prowess of artificial intelligence in understanding and generating human-like text. Developed by OpenAI, it offers users the opportunity to engage with models such as ChatGPT-4, the latest in a series of transformer-based deep learning models. This module delves into the architecture, applications, ethical considerations, and future of ChatGPT and its significance in modern technology.
 
-## The Underlying Architecture: Transformer Models
-The ChatGPT series is based on the Transformer architecture, which revolutionized natural language processing (NLP). This architecture utilizes a multi-layer self-attention mechanism that enables the model to consider all parts of the input simultaneously, rather than sequentially. This facilitates the model's understanding of complex dependencies in language.
+## The Underlying Architecture: The Transformer Model
+The ChatGPT models are based on the Transformer architecture, which revolutionized natural language processing (NLP). This architecture utilizes a multi-layer self-attention mechanism that enables the model to consider all parts of the input simultaneously, rather than sequentially. This facilitates the model's understanding of complex dependencies in language.
 
 ### Transformer Model Architecture Components
 
@@ -15,7 +15,7 @@ The latest version of ChatGPT consists of tens of billions of parameters. These 
 The transformer is built on an encoder-decoder architecture. The encoder processes the input sequence and compresses the information into a fixed-size context or 'memory'. The decoder then takes this memory and produces the output sequence.
 
 #### Attention Mechanism
-The attention mechanism is the cornerstone of the transformer model. The model uses a variant of scaled dot-product attention, which allows it to focus on different parts of the input sequence when producing the output. This is particularly useful in tasks like machine translation, where the alignment between input and output can be complex. The attention mechanism operates on queries, keys, and values—vectors representing the input and output sequences.
+The attention mechanism is the cornerstone of the transformer model. The model uses a variant of scaled dot-product attention, which allows it to focus on different parts of the input sequence when producing the output. This is particularly useful in tasks like machine translation, where the alignment between input and output can be complex. The attention mechanism operates on queries, keys, and value—vectors representing the input and output sequences.
 
 #### Multi-Head Attention
 In a multi-head attention layer, the model maintains multiple sets of attention weights and combines them. This helps the model to focus on different parts of the input sequence simultaneously, providing a richer representation.
@@ -41,7 +41,9 @@ ChatGPT is not confined to mere text generation. Its applications extend to:
 4. **Accessibility**: It can be adapted to assist individuals with disabilities, such as generating text for speech synthesis.
 
 ## Ethical Considerations
-With great power comes great responsibility. The deployment of ChatGPT raises important ethical questions:
+"With great power comes great responsibility." ~Stan Lee
+
+The deployment of ChatGPT raises important ethical questions:
 
 1. **Bias**: The model might inadvertently reproduce biases present in the training data, leading to skewed or prejudiced outputs.
 2. **Privacy**: Ensuring the confidentiality of user inputs and preventing unauthorized access is paramount.
