--- a/Module 3/1.2 Objective 2.md
+++ b/Module 3/1.2 Objective 2.md
@@ -2,7 +2,7 @@
 
 ## Introduction
 
-Prompt engineering is a critical aspect of working with language models like ChatGPT. It refers to the design, formulation, and optimization of prompts to guide the model's response in a specific direction. As AI models become more powerful and complex, the role of prompt engineering grows in importance. This article explores the principles, techniques, applications, and challenges of prompt engineering.
+Prompt engineering is a critical aspect of working with language models like ChatGPT. It refers to the design, formulation, and optimization of prompts to guide the model's response in a specific direction. As AI models become more powerful and complex, the role of prompt engineering grows in importance. This module explores the principles, techniques, applications, and challenges of prompt engineering.
 
 ## The Principles of Prompt Engineering
 
