--- a/Module 4/1.2 Objective 2.md
+++ b/Module 4/1.2 Objective 2.md
@@ -31,18 +31,33 @@ When you make an API call using the SDK, you receive a response object. This obj
 To extract the generated text from the response object, you can use the following code snippet:
 
 ```python
+import openai
+
+response = openai.Completion.create(
+    engine="text-davinci-002",
+    prompt="Translate the following English text to French: '{}'",
+    max_tokens=60
+)
+
 generated_text = response.choices[0].message.content.strip()
 ```
 
 As a function...
 
 ```python
+import openai
+
 def extract_reply(response):
     return response.choices[0].message.content.strip()
 
 
-generated_text = extract_reply(response)
+response = openai.Completion.create(
+    engine="text-davinci-002",
+    prompt="Translate the following English text to French: '{}'",
+    max_tokens=60
+)
 
+generated_text = extract_reply(response)
 ```
 
 ## Error Handling
@@ -103,7 +118,7 @@ The system prompt is generally set up at the beginning of an interaction and sta
 
 ### Implementing System Prompts with SDK
 
-Here's how you can include a system prompt while generating text using the OpenAI Python SDK:
+Here's how you can include a system prompt while generating text using the chat interface:
 
 ```python
 import openai
@@ -112,16 +127,17 @@ import openai
 def extract_reply(response):
     return response.choices[0].text.strip()
 
-raw_response = openai.Completion.create(
-    engine="text-davinci-002",
-    prompt=[
-        {"role": "system", "content": "You are an assistant that speaks like Shakespeare."},
-        {"role": "user", "content": "How is the weather today?"}
-    ],
-    max_tokens=60
+messages=[
+    {"role": "system", "content": "You are an assistant that speaks like Shakespeare."},
+    {"role": "user", "content": "How is the weather today?"}
+],
+
+result = openai.ChatCompletion.create(
+    model="gpt-3.5-turbo",
+    messages=messages,
 )
 
-reply = extract_reply(raw_response)
+reply = extract_reply(result)
 print(reply)
 ```
 
