--- a/Module 4/3.1 Module Project.md
+++ b/Module 4/3.1 Module Project.md
@@ -38,7 +38,7 @@ The main goal of this assignment is to develop a local LLM bot with customizable
 
 #### Evaluation Criteria:
 
-- Quality of the bot's design and implementation
+- Quality of the design and implementation of the bot
 - Effectiveness of the parameterization and customization
 - Implementation and performance of the memory model (if attempted)
 - Peer review feedback (optional)
