Update 1.3 Objective 3.md

--- a/Module 3/1.3 Objective 3.md
+++ b/Module 3/1.3 Objective 3.md
@@ -8,26 +8,28 @@ Language Models (LMs), such as the ChatGPT series, have become powerful tools in
 
 Bias in LLMs refers to the systematic and undue preference or prejudice toward certain ideas, groups, or concepts. It can manifest in various ways:
 
-### 1. **Data-Driven Bias**
-LLMs are trained on vast datasets collected from the internet, reflecting the biases present in those texts. This includes gender, racial, cultural, or ideological biases.
+#### 1. **Data-Driven Bias**
+LLMs are trained on vast datasets collected from the internet, reflecting the biases in those texts. This includes gender, racial, cultural, or ideological biases.
 
-### 2. **Design Bias**
+#### 2. **Design Bias**
 The choices made during the design and training processes can inadvertently introduce biases, such as emphasizing certain domains or underrepresenting others.
 
-### 3. **Interaction Bias**
-The way users interact with the model and the feedback loop created by those interactions can further reinforce or create new biases.
+#### 3. **Interaction Bias**
+How users interact with the model and the feedback loop created by those interactions can further reinforce or create new biases.
 
-## Implications of Bias
+Bias in LLMs is a multifaceted issue arising from the data they are trained on, the design choices made during their development, and their interactions with users. These biases pose limitations and ethical concerns that must be carefully considered in the broader context of LLM applications.
 
-Biases in LLMs have serious implications:
+### Implications of Bias
+
+Having explored the various forms of bias in LLMs, it’s important to understand the consequences these biases have. These implications are not just theoretical but pose real-world challenges, ranging from ethical dilemmas to legal ramifications and issues of public trust.
 
 1. **Ethical Concerns**: Biases can lead to unfair or discriminatory outcomes, raising ethical dilemmas.
 2. **Legal Risks**: In some jurisdictions, biased outcomes may violate anti-discrimination laws.
 3. **Public Trust**: Bias can undermine trust in AI systems, hindering their adoption and use.
 
-## Addressing Bias
+### Addressing Bias
 
-Efforts to mitigate biases include:
+Tackling the issue of bias is crucial for the responsible development and deployment of LLMs. Let’s now look at strategies and approaches aimed at addressing bias.
 
 1. **Diverse Training Data**: Ensuring diversity in the training data can help reduce imbalances and reflections of societal biases.
 2. **Bias Auditing**: Regularly auditing the model's outputs for biases enables early detection and correction.
@@ -35,7 +37,7 @@ Efforts to mitigate biases include:
 
 ## Limitations of LLMs
 
-Apart from biases, LLMs have intrinsic limitations:
+Stepping away from LLM bias, it’s also important to recognize LLM’s limitations. Despite their text generation and analysis prowess, LLMs come with inherent shortcomings like data dependency, environmental impact, and accessibility. Understanding these limitations provides a more comprehensive understanding of the challenges of employing LLMs.
 
 ### 1. **Understanding vs. Mimicking**
 LLMs excel at mimicking human-like text but lack true understanding or consciousness. This can lead to incorrect or nonsensical responses.
@@ -47,7 +49,7 @@ LLMs rely heavily on training data, meaning they might be outdated or lack exper
 The computational resources required for training LLMs have significant energy consumption, raising concerns about their environmental impact.
 
 ### 4. **Accessibility and Cost**
-The complexity and computational demands of LLMs can make them inaccessible to small organizations or individual researchers.
+LLMs' complexity and computational demands can make them inaccessible to small organizations or individual researchers.
 
 ## Conclusion
 
@@ -55,4 +57,5 @@ The biases and limitations of LLMs present both technical and ethical challenges
 
 Efforts to identify and mitigate biases, along with a realistic assessment of the models' limitations, are key to harnessing the potential of LLMs. Ongoing research, collaboration, and dialogue among developers, regulators, users, and affected communities will be vital in navigating these complex issues.
 
-The journey towards more fair, transparent, and responsible AI is a shared responsibility that requires vigilance, empathy, and innovation. By acknowledging and addressing biases and limitations, we can work towards a future where LLMs are not only powerful tools but also aligned with our collective values and goals.
+The journey towards more fair, transparent, and responsible AI is a shared responsibility that requires vigilance, empathy, and innovation. By acknowledging and addressing biases and limitations, we can work towards a future where LLMs are powerful tools and aligned with our collective values and goals.
+
