Update 1.1 Objective 1.md

--- a/Module 4/1.1 Objective 1.md
+++ b/Module 4/1.1 Objective 1.md
@@ -1,13 +1,20 @@
-## OpenAI API Basics
+## API Basics
 
-## Setting Up OpenAI's Python SDK
-The OpenAI API provides a way to programmatically interact with their models for various tasks like text generation, summarization, and more. OpenAI provides an SDK for Python that wraps the API, offering a more Pythonic way to make requests to the GPT models.
+In the digital landscape, software applications often possess unique functionalities that can be beneficial when integrated into other applications. A special interface is designed to handle external requests from other applications to facilitate such feature-sharing. This interface, known as the Application Programming Interface (API), serves as a secure and streamlined conduit for sharing capabilities and data between different software solutions. By utilizing an API, developers can enrich their own applications with the functionalities of another, amplifying the utility and reach of both platforms.
 
-### Prerequisites
+In the upcoming sections, we will delve into the intricacies of APIs: what they are, how they function, and the steps to create one. This knowledge will empower you to allow other applications to access specific software features.
+
+### What is an API?
+
+An API serves as a bridge that allows two different applications to communicate with each other. In the context of OpenAI's GPT, the API provides a way to programmatically interact with OpenAI’s models for various tasks like text generation, summarization, and more. From scratch, APIs can be involved, but with the use of tools like Software Development Kits, you can speed up the process.
+
+Software Development Kits (SDKs) are collections of software tools and libraries that simplify complex actions, making it easier to interact with an API. OpenAI provides an SDK for Python that wraps the raw API calls, offering a more Pythonic way to make requests to the GPT models.
+
+## Setting Up OpenAI Python SDK
 
 To work with the OpenAI Python SDK, you'll need:
 
-- Python 3.9 or higher (3.11+ recommended)
+- Python 3.6 or higher
 - OpenAI account
 - API key from OpenAI
 
@@ -19,25 +26,31 @@ Installing the OpenAI Python SDK is simple. Use pip to install the package:
 pip install openai
 ```
 
-### Initializing SDK
-
-To use the OpenAI SDK in your Python code, you need to import it and initialize it with your API key.
-
-#### API Key Configuration
+### API Key Configuration
 
 After obtaining your API key from OpenAI, you can set it up in one of two ways:
 
 1. Environment Variable: Set an environment variable called `OPENAI_API_KEY` with the key as its value.
-2. Directly in Code: Pass the API key as an argument while initializing the SDK. This is far less secure and NOT recommended.
+2. Directly in Code: Pass the API key as an argument while initializing the SDK.
 
-### Simple Example: Text Translation
+## Making First SDK Call
 
-Here's a quick example to generate text using the GPT-3 model via the OpenAI SDK:
+### Initializing SDK
+
+To use the OpenAI SDK in your Python code, you need to import it and initialize it with your API key.
 
 ```python
 import openai
 
 openai.api_key = "your-api-key-here"
+```
+
+### Simple Example: Text Generation
+
+Here's a quick example to generate text using the GPT-3 model via the OpenAI SDK:
+
+```python
+import openai
 
 text = "Welcome to Data Science"
 response = openai.Completion.create(
@@ -50,4 +63,5 @@ generated_text = response.choices[0].text.strip()
 print(generated_text)
 ```
 
-In this example, the text generated will be the French translation of the English text specified in the `text` variable. 
+In this example, the text generated will be the French translation of the English text specified in the `text` variable.
+
