Update 1.2 Objective 2.md

--- a/Module 4/1.2 Objective 2.md
+++ b/Module 4/1.2 Objective 2.md
@@ -26,8 +26,6 @@ This parameter controls the nucleus sampling, which filters the token pool befor
 
 When you make an API call using the SDK, you receive a response object. This object contains various pieces of information, including the generated text.
 
-### Extracting Generated Text
-
 To extract the generated text from the response object, you can use the following code snippet:
 
 ```python
@@ -62,14 +60,6 @@ generated_text = extract_reply(response)
 
 ## Error Handling
 
-### Common Error Types
-
-- `RateLimitExceeded`: You've exceeded the number of requests permitted in a given time frame.
-- `ResourceNotFound`: The engine specified does not exist.
-- `InvalidRequestError`: The API request was malformed.
-
-### SDK-specific Error Handling
-
 To handle errors gracefully, you can use Python's try-except blocks. Here's an example:
 
 ```python
@@ -86,6 +76,12 @@ except openai.OpenAIError as e:
     print(f"An error occurred: {e}")
 
 ```
+
+You may need to account for more common errors; errors you might find in any API. Here is the short list of those errors you may encounter:
+
+- `RateLimitExceeded`: You've exceeded the number of requests permitted in a given time frame.
+- `ResourceNotFound`: The engine specified does not exist.
+- `InvalidRequestError`: The API request was malformed.
 
 ## Advanced SDK Usage
 
@@ -164,3 +160,5 @@ With this foundation, you are well-prepared to explore more advanced topics and 
 
 ## Additional Resources
 - [OpenAI API Reference](https://platform.openai.com/docs/api-reference)
+
+
