Update 3.1 Module Project.md

--- a/Module 3/3.1 Module Project.md
+++ b/Module 3/3.1 Module Project.md
@@ -18,7 +18,7 @@ The primary goal of this assignment is to brainstorm innovative project ideas th
     - Decide on a general domain you are interested in for your project (e.g., healthcare, sustainability, automation).
 
 3. **Brainstorming Session**
-    - Use ChatGPT to brainstorm potential project ideas within your chosen domain.
+    - Use ChatGPT to brainstorm potential LLM project ideas within your chosen domain.
     - Pose questions to the model like, "What are some unique ways to use AI in healthcare?" or "How could machine learning improve public transportation?"
     - Take notes during the brainstorming session for later review.
 
