Update 3.1 Module Project.md

--- a/Module 3/3.1 Module Project.md
+++ b/Module 3/3.1 Module Project.md
@@ -25,7 +25,7 @@ The primary goal of this assignment is to brainstorm innovative project ideas th
 4. **Idea Refinement**
     - Choose at least three project ideas that interest you.
     - Engage with ChatGPT to explore these ideas in more depth.
-        - For example, ask, "What would be the steps to use AI for real-time language translation in emergency services?"
+        - e.g., "What would be the steps to use AI for real-time language translation in emergency services?"
 
 5. **Documentation**
     - Document each of your selected ideas, outlining:
@@ -35,7 +35,7 @@ The primary goal of this assignment is to brainstorm innovative project ideas th
         - Limitations and challenges of the idea
 
 6. **Peer Review (stretch goal)**
-    - Share your documented ideas with classmates for a review and gather constructive feedback.
+    - Share your documented ideas with classmates or a friend for a review and gather constructive feedback.
 
 7. **Final Refinement**
     - Refine your ideas based on the peer feedback received.
