--- a/Module 4/3.1 Module Project.md
+++ b/Module 4/3.1 Module Project.md
@@ -4,11 +4,13 @@
 
 The main goal of this assignment is to develop a local LLM bot with customizable prompts and parameters. As a stretch goal, you will implement a short-term memory model for the bot, allowing for more coherent and context-aware interactions.
 
+The instructions for this project are intentionally a bit vague. The purpose of this is for you to build something of your own design, which can present many challenges and more importantly, a portfolio-worthy project.
+
 #### Prerequisites:
 
 - Python programming experience
 - Basic understanding of machine learning, NLP, and LLMs
-- Access to an LLM API or local setup
+- Access to an LLM API or local LLM setup
 
 #### Steps:
 
@@ -25,7 +27,7 @@ The main goal of this assignment is to develop a local LLM bot with customizable
     - Implement a memory system for your bot. This can range from simply feeding back previous interactions to a more complex approach like a vector database for automatic relevant recall.
 
 5. **Evaluation**
-    - Evaluate the bot's performance in terms of coherence, relevance, and context-awareness.
+    - Evaluate the performance in terms of coherence, relevance, and context-awareness.
 
 6. **Documentation**
     - Document your design choices, implementation details, and observations.
@@ -45,6 +47,5 @@ The main goal of this assignment is to develop a local LLM bot with customizable
 
 #### Resources:
 
-- LLM API documentation
-- Research papers on short-term memory models in bots
-- Guided Project: Vector Databases for Long Term LLM Memory
+- LLM API documentation [OpenAI API](https://platform.openai.com/docs/guides/gpt)
+- Local LLMs [Huggingface LLMs](https://huggingface.co/models?pipeline_tag=text-generation&sort=trending)
