--- a/Module 4/3.1 Module Project.md
+++ b/Module 4/3.1 Module Project.md
@@ -47,5 +47,5 @@ The instructions for this project are intentionally a bit vague. The purpose of 
 
 #### Resources:
 
-- LLM API documentation [OpenAI API](https://platform.openai.com/docs/guides/gpt)
+- LLM API [OpenAI API](https://platform.openai.com/docs/guides/gpt)
 - Local LLMs [Huggingface LLMs](https://huggingface.co/models?pipeline_tag=text-generation&sort=trending)
