Update 3.1 Module Project.md

--- a/Module 4/3.1 Module Project.md
+++ b/Module 4/3.1 Module Project.md
@@ -37,6 +37,13 @@ The instructions for this project are intentionally a bit vague. The purpose of 
 
 8. **Final Submission**
     - Submit your code and documentation for evaluation.
+  
+#### Evaluation Criteria:
+
+- Quality of the design and implementation of the bot
+- Effectiveness of the parameterization and customization
+- Implementation and performance of the memory model (if attempted)
+- Peer review feedback (optional)
 
 #### Resources:
 
