--- a/Sprint-15-Sprint-Challenge.ipynb
+++ b/Sprint-15-Sprint-Challenge.ipynb
@@ -15,7 +15,7 @@
     "2. Customize the behavior of an LLM\n",
     "3. Use a custom LLM in your terminal\n",
     "\n",
-    "You may use any Python libraries that can be installed via pip, including the Python standard library. Please do not use any websites like ChatGPT to write your stories, you are welcome use them to help write the code for your custom model though! Pro Tip: ask them to act as teachers to help you learn rather than just getting them to write the code for you."
+    "You may use any Python libraries that can be installed via pip, including the Python standard library. Please do not use any websites like ChatGPT to write your stories. You are welcome to use them to help write the code for your custom model, though! Pro Tip: ask them to act as teachers to help you learn rather than just getting them to write the code for you."
    ],
    "metadata": {
     "collapsed": false
@@ -26,7 +26,7 @@
    "source": [
     "### Part 1 - Choose an LLM Model 🔍\n",
     "\n",
-    "The easy choice here is OpenAi's API version of GPT, but requires a paid account. If you want a higher level challenge - choose an open source model that runs locally. GPT not only is easier to set up, but it also performs better than open source models. However, you will learn way more if you implement a local opensource model."
+    "The easy choice here is OpenAi's API version of GPT, but it requires a paid account. If you want a higher-level challenge, choose an open-source model that runs locally. Although GPT is easier to set up and performs better than open-source models, you will learn way more if you implement a local open-source model."
    ],
    "metadata": {
     "collapsed": false
@@ -37,9 +37,9 @@
    "source": [
     "### Part 2 - Implement an LLM Model as a Brilliant Storyteller Bot 🤖\n",
     "\n",
-    "Design an LLM that acts like a brilliant storyteller. The challenge is to design it such that, it generates a story based on user input. The stories should be about 1000 words in length or longer.\n",
+    "Design an LLM that acts like a brilliant storyteller by having it generate a story based on user input. The stories should be about 1000 words in length or longer.\n",
     "\n",
-    "Be mindful of the context window of the model you choose, the (system_prompt + user_prompt + output) needs to fit inside one context window. See the documentation for the model you're using for more details. Pro Tip: choose a model with good documentation! 😏"
+    "Be mindful of the context window of the model you choose. The system_prompt, user_prompt, and output combined need to fit inside one context window. See the documentation for the model you're using for more details. Pro Tip: choose a model with good documentation! 😏"
    ],
    "metadata": {
     "collapsed": false
@@ -64,7 +64,7 @@
    "source": [
     "### Part 3 - StoryBot Testing 🧪\n",
     "\n",
-    "Have your bot write a few stories and evaluate them. Are there alterations that can be made to the model's parameters to improve the results?"
+    "Have your bot write a few stories and evaluate them. Can alterations be made to the model's parameters to improve the results?"
    ],
    "metadata": {
     "collapsed": false
@@ -87,13 +87,13 @@
    "source": [
     "### Part 4 - Story Submission 📜\n",
     "\n",
-    "Have your bot generate at least 3 stories and choose your favorite, this will be uploaded for evaluation. The story should be 1000 words or more and be purely AI generated, please do not edit the story in any way.\n",
+    "Have your bot generate at least three stories and choose your favorite to upload for evaluation. The story should be 1000 words or more and be purely AI-generated. Please do not edit the story in any way.\n",
     "\n",
     "#### Stretch Goals (Optional) 🏄\n",
     "\n",
     "- Have the call method of the bot output a story as a txt file rather than printing to the terminal, so you don't need to copy/paste for submission.\n",
     "- Give your bot a distinct personality on top of its ability to write captivating stories.\n",
-    "- Implement a memory module for your bot. This would give you the ability to have it do multiple revisions of the same story based on your input.\n",
+    "- Implement a memory module for your bot. A memory module would give you the ability to have it do multiple revisions of the same story based on your input.\n",
     "- Implement an API (Flask or FastAPI) to interact with your bot."
    ],
    "metadata": {
