--- a/Module 4/1.3 Objective 3.md
+++ b/Module 4/1.3 Objective 3.md
@@ -1,21 +1,79 @@
 # Local LLM setup
 
-### Install Dependencies
+## Introduction
+This module outlines the setup and usage of a Local Language Model (LLM) to create a chatbot named Marv, who is programmed to provide sarcastic responses. The LLM is powered by the llama_cpp Python package and is fine-tuned to answer queries based on the persona set by the system prompt.
+
+### Topics Covered
+- Installing Dependencies
+- Initializing the LLM
+- Crafting System and User Prompts
+- Running the LLM and Obtaining a Response
+- Understanding the Parameters
+
+### Installing Dependencies
+
+To get started, install the llama-cpp-python package using pip.
 
 ```bash
 pip install llama-cpp-python
 ```
 
-### Marv the Sarcastic Bot
+### Download the LLM
+
+- [openorca-platypus2](https://huggingface.co/TheBloke/OpenOrca-Platypus2-13B-GGUF/resolve/main/openorca-platypus2-13b.Q4_K_M.gguf)
+
+### Initializing the LLM
+
+Import the Llama class and initialize it with the appropriate model path.
+
+```python
+from llama_cpp import Llama
+llm = Llama(model_path="./app/models/openorca-platypus2-13b.Q4_K_M.gguf")
+```
+
+### Crafting System and User Prompts
+
+Set up the system and user prompts. The system prompt acts as the instruction for the LLM, specifying its persona. The user prompt serves as the query or statement from the user.
+
+1. **System Prompt**: It serves as the instruction for the model, defining its persona. In this example, the persona is "Marv, a chatbot that reluctantly answers questions with sarcastic responses." This instructs the model to generate replies that are sarcastic in nature. The system prompt is often crucial in setting the tone, style, and context for how the language model should behave.
+
+2. **User Prompt**: This is the query or statement from the user. The language model takes this as the actual question or issue to respond to. In your example, the user prompt is "In the coming months AI will," which would be a starting point for the model to generate a continuation.
+
+```python
+system_prompt = "You are Marv, a chatbot that reluctantly answers questions with sarcastic responses."
+user_prompt = "Hi Marv, what's up?"
+
+```
+
+### Running the LLM and Obtaining a Response
+
+Create a composite prompt by combining the system and user prompts and run the LLM. Extract and print the response.
+
+```python
+prompt = f"### Instruction: {system_prompt}\n\n{user_prompt}\n\n### Response:\n"
+raw_output = llm(prompt, stop=["###"], max_tokens=-1, temperature=1)
+reply = raw_output.get("choices")[0].get("text").strip()
+print(reply)
+```
+
+### Understanding the Parameters
+
+- stop=["###"]: Stops token generation at "###".
+- max_tokens: Sets a limit on the number of tokens. -1 for no limit.
+- temperature: Controls the randomness of output, ranging from 0 to 1.
+
+This module equips you with the know-how to set up and run a sarcastic chatbot using a Local Language Model. Feel free to modify the prompts and parameters as needed.
+
+
+### Putting It All together: Marv the Sarcastic Bot
 
 ```python
 from llama_cpp import Llama
 
-
 system_prompt = "You are Marv, a chatbot that reluctantly answers " \
                 "questions with sarcastic responses."
 
-user_prompt = "In the coming months AI will"
+user_prompt = "Hi Marv, what's up?"
 
 prompt = f"### Instruction: {system_prompt}\n\n" \
          f"{user_prompt}\n\n" \
@@ -34,16 +92,5 @@ reply = raw_output.get("choices")[0].get("text").strip()
 print(reply)
 ```
 
-1. **System Prompt**: It serves as the instruction for the model, defining its persona. In this example, the persona is "Marv, a chatbot that reluctantly answers questions with sarcastic responses." This instructs the model to generate replies that are sarcastic in nature. The system prompt is often crucial in setting the tone, style, and context for how the language model should behave.
-
-2. **User Prompt**: This is the query or statement from the user. The language model takes this as the actual question or issue to respond to. In your example, the user prompt is "In the coming months AI will," which would be a starting point for the model to generate a continuation.
-
-3. **Composite Prompt**: Both the system and user prompts are combined to create a composite prompt (`prompt`). This composite prompt will be passed to the LLM. The structure is important; by preceding the user prompt with the system prompt and the instruction, the model is "primed" to answer in the persona set by the system prompt. 
-   - For instance, if the user prompt is "tell me a joke," and the system prompt sets the persona as sarcastic, the generated reply might not be a straightforward joke but rather a sarcastic comment about telling jokes. 
-   - The `### Instruction: {system_prompt}` and `### Response:` parts act as markers, helping the model to understand the roles of the system prompt and where its reply should start, respectively. This is particularly useful in fine-tuned models that have been trained to recognize such structural cues.
-
-4. `stop=["###"]`: Stops generating tokens when it encounters "###". This is not strictly necessary but helps to keep the model from talking to itself in an endless loop. Some models are more prone to this issue than others.
-
-5. `max_tokens`: No limit on the number of tokens to be generated when set to -1, otherwise this controls the maximum output by truncation if necessary.
-
-6. `temperature`: Controls the randomness of the output (lower means less random). Ranges from 0 (deterministic) to 1 (non-deterministic). For many models this setting is more of a suggestion than a directive.
+## Additional Resources
+- [Huggingface Text Generation Models](https://huggingface.co/models?pipeline_tag=text-generation&sort=trending)
