--- a/Module 4/1.1 Objective 1.md
+++ b/Module 4/1.1 Objective 1.md
@@ -1,10 +1,10 @@
+# OpenAI API - The API Behind ChatGPT
+
 ## API Basics
 
 In the digital landscape, software applications often possess unique functionalities that can be beneficial when integrated into other applications. A special interface is designed to handle external requests from other applications to facilitate such feature-sharing. This interface, known as the Application Programming Interface (API), serves as a secure and streamlined conduit for sharing capabilities and data between different software solutions. By utilizing an API, developers can enrich their own applications with the functionalities of another, amplifying the utility and reach of both platforms.
 
-In the upcoming sections, we will delve into the intricacies of APIs: what they are, how they function, and the steps to create one. This knowledge will empower you to allow other applications to access specific software features.
-
-### What is an API?
+### What is OpenAI's API and SDK?
 
 An API serves as a bridge that allows two different applications to communicate with each other. In the context of OpenAI's GPT, the API provides a way to programmatically interact with OpenAI’s models for various tasks like text generation, summarization, and more. From scratch, APIs can be involved, but with the use of tools like Software Development Kits, you can speed up the process.
 
