--- a/Sprint-15-Sprint-Challenge.ipynb
+++ b/Sprint-15-Sprint-Challenge.ipynb
@@ -87,7 +87,7 @@
    "source": [
     "### Part 4 - Story Submission 📜\n",
     "\n",
-    "Have your bot generate at least three stories and choose your favorite to upload for evaluation. The story should be 1000 words or more and be purely AI-generated. Please do not edit the story in any way.\n",
+    "Have your bot generate at least three stories and choose your favorite to upload for evaluation. The story should be 1000 words or more and be purely AI-generated. Please do not edit the story in any way. To submit your Sprint Challenge, upload your `story.txt` file by itself.\n",
     "\n",
     "#### Stretch Goals (Optional) 🏄\n",
     "\n",
